feat: ProductController created with the necessary endpoints for the product manage, product searching improvements